--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,3 +1,24 @@
 .banner-image {
-    margin: 2em 0em;
+    max-height: 100px;
+    margin: 2em auto;
+}
+
+.navbar-brand {
+    font-size: 110%;
+}
+
+.footer {
+    margin-top: 10em;
+    text-align: center;
+}
+
+.qrcode {
+    width: 100%;
+    max-width: 300px;
+    margin: 0 auto;
+    image-rendering: -moz-crisp-edges;         /* Firefox */
+    image-rendering:   -o-crisp-edges;         /* Opera */
+    image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
+    image-rendering: crisp-edges;
+    -ms-interpolation-mode: nearest-neighbor;  /* IE (non-standard property) */
 }
