--- a/static/css/app.css
+++ b/static/css/app.css
@@ -12,6 +12,10 @@
     text-align: center;
 }
 
+.navbar-inverse .navbar-toggle .icon-bar {
+    background-color: white;
+}
+
 .qrcode {
     width: 100%;
     max-width: 300px;
@@ -21,4 +25,16 @@
     image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
     image-rendering: crisp-edges;
     -ms-interpolation-mode: nearest-neighbor;  /* IE (non-standard property) */
+}
+
+.navbar-inverse .navbar-brand {
+    color: white;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color: white;
+}
+
+.navbar-inverse .navbar-link {
+    color: white;
 }
