--- a/static/css/app.css
+++ b/static/css/app.css
@@ -45,10 +45,54 @@
     min-height: 250px;
 }
 
+.app-dock {
+    margin: 0 auto 10px auto;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.app-icon {
+    border: 1px solid grey;
+    border-radius: 20%;
+}
+
+.app-dock-item {
+    padding: 0px 5px 2px 5px;
+}
+
+.app-dock-item p {
+    margin-bottom: 0px;
+}
+
+.app-dock-item p a {
+    font-size: 95%;
+    color: #555;
+}
+
+.app-dock-item p a:hover {
+    text-decoration: none;
+}
+
+.app-dock-item p a img {
+    width: 50px;
+    display: block;
+    margin: 0 auto;
+}
+
+.app-dock-item p a span {
+    display: block;
+    text-align: center;
+}
+
 /* Small Devices, Tablets */
 @media only screen and (min-width: 768px) and (max-width: 991px) {
     .row.widget-box > .col-sm-6:nth-child(2n+3) {
         clear: both;
+    }
+    
+    .app-dock {
+        max-width: 50%;
     }
 }
 
@@ -56,5 +100,9 @@
 @media only screen and (min-width: 992px) {
     .row.widget-box > .col-md-4:nth-child(3n+4) {
         clear: both;
+    }
+    
+    .app-dock {
+        max-width: 50%;
     }
 }
