Improve app dock CSS handling of many items (yay fluxbox, screw IE)

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -45,6 +45,10 @@
     min-height: 250px;
 }
 
+.app-dock-container {
+    display: flex;
+}
+
 .app-dock {
     margin: 0 auto 10px auto;
     display: flex;
@@ -59,6 +63,7 @@
 
 .app-dock-item {
     padding: 0px 5px 2px 5px;
+    min-width: 100px;
 }
 
 .app-dock-item p {
@@ -90,19 +95,11 @@
     .row.widget-box > .col-sm-6:nth-child(2n+3) {
         clear: both;
     }
-    
-    .app-dock {
-        max-width: 50%;
-    }
 }
 
 /* Medium Devices, Desktops */
 @media only screen and (min-width: 992px) {
     .row.widget-box > .col-md-4:nth-child(3n+4) {
         clear: both;
-    }
-    
-    .app-dock {
-        max-width: 50%;
     }
 }
