--- a/static/css/app.css
+++ b/static/css/app.css
@@ -9,6 +9,16 @@
     font-size: 110%;
 }
 
+.navbar-brand img {
+    height: 35px;
+    padding-bottom: 12px;
+    padding-left: 5px;
+}
+
+.pad-75px {
+    height: 75px;
+}
+
 .footer {
     margin-top: 10em;
     text-align: center;
