--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,6 +1,15 @@
-<?php
 /* This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-header("Location: app.php");
+.banner-image {
+    max-height: 100px;
+    margin: 2em auto;
+    border: 1px solid grey;
+    border-radius: 15%;
+}
+
+.footer {
+    margin-top: 10em;
+    text-align: center;
+}
