--- a/static/css/login.css
+++ b/static/css/login.css
@@ -5,7 +5,19 @@ file, You can obtain one at http://mozilla.org/MPL/2.0/.
 */
 
 .display-5 {
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: 300;
     line-height: 1.2;
+}
+
+.banner-image {
+    max-height: 100px;
+    margin: 2em auto;
+    border: 1px solid grey;
+    border-radius: 15%;
+}
+
+.blank-image {
+    height: 100px;
+    margin: 2em auto;
 }
